fix whitespaces, edit misc text

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .connect-btn {
-    font-size: 2em;
+    font-size: 1.75em;
     color: #17191C;
     margin-right: 58px;
 }
